--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
     "name": "assertion",
-    "version": "0.99.95",
+    "version": "0.99.96",
     "description": "Assertion Library",
-    "main": "lib/assert.js",
+    "main": "lib/assert.min.js",
     "scripts": {
         "test": "node_modules/.bin/atma test"
     },
     "keywords": [
-        "assert", "assertions", "test", "TDD", "unit test"
+        "assert",
+        "assertions",
+        "test",
+        "TDD",
+        "unit test"
     ],
     "author": "Alexander Kit <alex.kit@atmajs.com",
     "license": "MIT",
