[fix] travis - start server

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,11 @@ before_script:
   - sh -e /etc/init.d/xvfb start
   - sleep 5
   - node_modules/.bin/atma &
-  - sleep 1
+  - node_modules/.bin/atma server &
+  - sleep 5
+  - firefox http://localhost:5777/utest/ &
+  - sleep 8
+ 
   
 script:
   - "npm test"
