--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "assertion",
     "version": "1.3.25",
-    "description": "Assertion Library",
+    "description": "Assertion Library for Browser and Node.JS",
     "main": "lib/assert.min.js",
+    "types": "typings/typings.json",
     "scripts": {
-        "test": "node_modules/.bin/atma test"
+        "test": "atma test"
     },
     "keywords": [
         "assert",
@@ -17,5 +18,14 @@
     "license": "MIT",
     "devDependencies": {
         "atma": "latest"
+    },
+    "atma": {
+        "release": [
+            "lib/**",
+            "typings/**",
+            "readme.md",
+            "package.json",
+            "bower.json"
+        ]    
     }
 }
