--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "assertion",
-    "version": "1.3.27",
+    "version": "1.3.29",
     "description": "Assertion Library for Browser and Node.JS",
     "main": "lib/assert.min.js",
-    "types": "typings/typings.json",
+    "types": "typings/typings/assertion.d.ts",
     "scripts": {
         "test": "atma test"
     },
